Fix date picker cell visual alignment in Firefox.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -453,7 +453,6 @@
       border-radius: 99em;
       font-weight: bold;
       font-size: 1em;
-      padding: 9px;
       box-shadow: none;
     }
     .vuecal__scrollable--day-view .vuecal__cell {
